Change profile anchor to a div tag and add padding on top to correct landing position on mobile.

--- a/styles/mobile.css
+++ b/styles/mobile.css
@@ -1001,6 +1001,11 @@ blockquote {
         margin-bottom: 14px;
     }
 
+    .book-profile-anchor {
+        position: absolute;
+        margin-top: -72px;
+    }
+
     .book-profiles-bio {
         text-align: center;
     }
